# MiniVR

./: CMakeLists.txt  README.md
include/: BoundingBox.hh  Octree.hh  OctreeNode.hh  Types.hh  sat_wrapper.cuh
src/: BoundingBox.cpp  Octree.cpp  main.cpp  sat_wrapper.cu
